--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
           <p>
             OR you may be looking for someone who can give clarity to your dialogues recorded on set, build and synchronize backgrounds, 
             sound effects and create sounds that bring realism and give life to your projects fulfilling the international 
-            normative and requirements, 
+            normative and requirements, I'm your guy too!
           </p>
         </section>
 
