--- a/index.html
+++ b/index.html
@@ -69,20 +69,9 @@
 
           
           <div class="contact-info">
-          <img src="./assets/images/espanol2.svg
-            " alt="design icon" width="45">
+          <img src="./assets/images/languages.svg
+            " alt="design icon" width="187px">
           </div>
-
-          <div class="contact-info">
-            <img src="./assets/images/english2.svg
-              " alt="design icon" width="45">
-          </div>
-
-          <div class="contact-info">
-            <img src="./assets/images/italiano2.svg
-              " alt="design icon" width="45">
-          </div>
-        
 
         </li>
         <div class="separator"></div>
@@ -188,14 +177,9 @@
           <li class="contact-item">
 
             <div class="contact-info">
-              <img src="./assets/images/academia logo.png
-                " alt="design icon" width="100">
+              <img src="./assets/images/academia-adsc.svg
+                " alt="design icon" width="187px">
             </div>
-
-            <div class="contact-info">
-                <img src="./assets/images/adsc.png
-                  " alt="design icon" width="85">
-              </div>
 
           </li>
 
