--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
         <section class="about-text">
           <p>
-            Colombian Film Academy and Colombian Film Sound Association honorary member.  I started mixing and recording  
+            <b>Colombian Film Academy</b> and <b>Colombian Film Sound Association</b> honorary member.  I started mixing and recording  
             live music fourteen years ago and have been working as a professional sound editor, boom operator 
             and production sound mixer for film and audiovisual media for twelve years.
           </p>
@@ -280,7 +280,7 @@
           </p>
 
           <p>
-            OR you may be looking for someone who can give clarity to your dialogues recorded on set, build and synchronize backgrounds, 
+            <b>OR</b> you may be looking for someone who can give clarity to your dialogues recorded on set, build and synchronize backgrounds, 
             sound effects and create sounds that bring realism and give life to your projects fulfilling the international 
             normative and requirements, I'm your guy too!
           </p>
