--- a/index.html
+++ b/index.html
@@ -2228,9 +2228,7 @@
 
 
 
-  <!--
-    - custom js link
-  -->
+  <!-- Main JS -->
   <script src="./assets/js/script.js"></script>
 
   <!--
@@ -2238,6 +2236,7 @@
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 
 </body>
 
